# Project

./: debug-server.js  insert_to_db.py  nba_data_fetcher.py  nba_data_scraper.py  nba_players.json  package-lock.json  package.json  pyproject.toml  replit.nix  server.js  start.js
backend/: server.js
backend/config/: config.js  db.js
backend/controllers/: analysisController.js  playerController.js  predictionController.js
backend/model/: Analysis.js  Player.js
backend/routes/: api.js
backend/services/: mlService.js  nbaApiFetcher.js  nbaApiService.js
frontend/: package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue
frontend/src/components/: Dashboard.vue  PlayerSearch.vue  PlayerStats.vue  PredictionCard.vue  SavedAnalyses.vue  StatVisualization.vue
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/store/: index.js
ml/: data_processor.py  random_forest_model.py  reinforcement_learning_model.py  train_models.py
ml/data/: sample_data.json
ml/models/: random_forest_model.pkl  reinforcement_model.pkl  scaler.pkl
public/: app.js  index.html
